backend/tests/golden/queries/positive/08_union_without_all/query.sdbl
ВЫБРАТЬ Ссылка ИЗ Документ.АвансовыйОтчет
ОБЪЕДИНИТЬ
ВЫБРАТЬ Ссылка ИЗ Документ.ПриходныйКассовыйОрдер
