backend/tests/golden/queries/negative/07_union_all_correct/query.sdbl
ВЫБРАТЬ Ссылка, Дата ИЗ Документ.АвансовыйОтчет
ОБЪЕДИНИТЬ ВСЕ
ВЫБРАТЬ Ссылка, Дата ИЗ Документ.ПриходныйКассовыйОрдер
